<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input_sample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.triptime.devcell.InputSample">

    <TextView
        android:id="@+id/marca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!--<EditText
        android:id="@+id/in_cdOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cd_origen"
        android:layout_below="@id/marca">

        <requestFocus />

    </EditText>-->
    <!--<Spinner
        android:id="@+id/in_cdOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marca"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp">

        <requestFocus />

        </Spinner>-->

    <AutoCompleteTextView
        android:id="@+id/in_cdOrigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marca"
        android:hint="@string/origin_plant">

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/in_horaMuestra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_cdOrigen"
        android:hint="@string/hora_muestra"
        android:inputType="time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_horaMuestra"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:background="#0099FF"
            android:text="@string/aceptar"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:onClick="aceptarMuestra"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#0099FF"
            android:text="@string/cancelar"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:onClick="cancelarMuestra"/>
    </LinearLayout>
</RelativeLayout>
