<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/brand_section">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/brand_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:paddingLeft="16dp"
                android:text="@string/column2"
                android:textAllCaps="true"
                android:textColor="?android:attr/colorPressedHighlight"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/brand_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/cd_section"
            android:layout_below="@+id/brand_section">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:paddingLeft="16dp"
                android:text="@string/column1"
                android:textAllCaps="true"
                android:textColor="?android:attr/colorPressedHighlight"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cd_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/time_section"
            android:layout_below="@+id/cd_section">

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:paddingLeft="16dp"
                android:text="@string/column3"
                android:textAllCaps="true"
                android:textColor="?android:attr/colorPressedHighlight"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>